openai gpt api 활용하기

--- a/gpt_api_ex/gpt_api_template.ipynb
+++ b/gpt_api_ex/gpt_api_template.ipynb
@@ -1,16 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "bf2e4431",
-   "metadata": {},
-   "source": [
-    "# openai api key 테스트"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "7de6de29",
    "metadata": {},
    "outputs": [],
@@ -20,24 +12,8 @@
     "\n",
     "# .env 파일에 저장된 환경변수 로드\n",
     "load_dotenv(override=True)\n",
-    "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "25f3367d",
-   "metadata": {},
-   "source": [
-    "## 라이브러리 로딩 및 객체 생성"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "47d683ea",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")\n",
+    "\n",
     "\n",
     "from openai import OpenAI\n",
     "\n",
