--- a/gpt_api_ex/0test.ipynb
+++ b/gpt_api_ex/0test.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "id": "7de6de29",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "47d683ea",
    "metadata": {},
    "outputs": [],
@@ -469,7 +469,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "llm_env",
    "language": "python",
    "name": "python3"
   },
